set_property(DIRECTORY PROPERTY CXX_EXTENSIONS OFF)
set_property(DIRECTORY PROPERTY CMAKE_CXX_STANDARD 14)
set_property(DIRECTORY PROPERTY CMAKE_CXX_STANDARD_REQUIRED ON)
file(GLOB SRCS *.cpp Mapper/*.cpp Common/*.cpp)
file(GLOB HDRS *.hpp Mapper/*.hpp Common/*.hpp)
find_package(SDL2 REQUIRED)
include_directories(${SDL2_INCLUDE_DIRS})
add_executable(${PROJECT_NAME} ${SRCS} ${HDRS})
target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARIES})